[package]
name    = "domainfinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio             = { version = "*", features = ["full"] }
log               = "*"
pretty_env_logger = "*"
rayon             = "*"
glob              = "*"
indicatif         = "*"
dnsclient         = { version = "*", features = ["async-tokio"], default-features = false }
futures           = "*"
